--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "url": "git+https://github.com/mcd-50/youtube-fetcher.git"
   },
   engines:{
-    "node":"^6.11.1",
-    "npm":"^3.10.10"
+    "node":"6.11.1",
+    "npm":"3.10.10"
   },
   "keywords": [
     "Fetch",
