--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "type": "git",
     "url": "git+https://github.com/mcd-50/youtube-fetcher.git"
   },
-  engines:{
-    "node":"6.11.1",
-    "npm":"3.10.10"
+  "engines":{
+    "node":"^6.11.0",
+    "npm":"^3.10.10"
   },
   "keywords": [
     "Fetch",
